[gd_scene load_steps=3 format=2]

[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.gd" type="Script" id=1]
[ext_resource path="res://Components/brain/movement_lobe/spring/spring.tscn" type="PackedScene" id=2]

[node name="movement_lobe" type="Node2D"]
script = ExtResource( 1 )

[node name="idle_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="wander_timer" type="Timer" parent="."]
one_shot = true

[node name="movement_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="default_spring" parent="." instance=ExtResource( 2 )]

[connection signal="tree_entered" from="." to="." method="_on_movement_lobe_tree_entered"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="wander_timer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
